--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
 
 <dl>
     <dt>Fri 27 March 2015</dt>
+    <dd><a href="http://icymist.github.io/install-anaconda-for-a-painless-python-experience.html">Install Anaconda for a painless Python experience</a></dd>
+    <dt>Fri 27 March 2015</dt>
     <dd><a href="http://icymist.github.io/install-torque-on-a-single-multi-core-linux-deskop.html">Install Torque on a single multi-core Linux deskop</a></dd>
 </dl>
 </section>
