--- a/tags.html
+++ b/tags.html
@@ -23,7 +23,8 @@
 <section id="content" class="body">
     <h1>Tags for Chaitanya Krishna Ande</h1>
     <ul>
-        <li><a href="http://icymist.github.io/tag/linux.html">linux</a> (1)</li>
+        <li><a href="http://icymist.github.io/tag/linux.html">linux</a> (2)</li>
+        <li><a href="http://icymist.github.io/tag/python.html">python</a> (1)</li>
     </ul>
 </section>
 
