Generate Pelican Site

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,14 +24,14 @@
     
     <p>I am Chaitanya Krishna Ande, currently working as a Post-doctoral Researcher at the Eindhoven University of Technology, The Netherlands.
 I practice something called 'materials modeling'.</p>
-<p>Materials modeling is using the powerful combination of quantum mechanics and computers to enhance understanding of materials.
+<p>Materials modeling uses the powerful combination of quantum mechanics and computers to enhance understanding of materials.
+It adds significantly to what can be achieved by experiments alone.
 The word materials is used in the broadest sense possible, encompassing anything that is tangible.
-Of course, all materials cannot be modeled equally well, but that is the ultimate aim.
-Materials modeling adds significantly to what can be achieved by experiments alone.</p>
-<p>The broad aim of my work is to use materials modeling to achieve the following:</p>
+Of course, all materials cannot be modeled equally well, but that is the ultimate aim.</p>
+<p>The broad aim of my work is to use materials modeling and achieve the following:</p>
 <ol>
 <li>Determine electrical, mechanical, optical and thermal properties of any material from a knowledge of its constitution and structure alone.
-    For example, determing all the above properties for diamond, knowing that it is made entirely of carbon (consitution) arranged in a certain way (structure).</li>
+    For example, determing all the above properties for diamond, knowing that it is made entirely of carbon (constitution) arranged in a certain way (structure).</li>
 <li>Explain, understand and predict how materials transform from one form to another.
     For example, understand how water froms from hydrogen and oxygen on a platinum surface, but on not in the atmosphere.
     Also, any chemical reaction, or phase transformation is a valid example.</li>
