--- a/archives.html
+++ b/archives.html
@@ -17,12 +17,15 @@
                 <nav><ul>
                     <li><a href="http://icymist.github.io/pages/about.html">About</a></li>
                     <li><a href="http://icymist.github.io/category/how-to.html">How To</a></li>
+                    <li><a href="http://icymist.github.io/category/productivity.html">Productivity</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Chaitanya Krishna Ande</h1>
 
 <dl>
+    <dt>Fri 10 April 2015</dt>
+    <dd><a href="http://icymist.github.io/using-git-and-latexdiff.html">Using git and latexdiff</a></dd>
     <dt>Fri 27 March 2015</dt>
     <dd><a href="http://icymist.github.io/install-anaconda-for-a-painless-python-experience.html">Install Anaconda for a painless Python experience</a></dd>
     <dt>Fri 27 March 2015</dt>
