--- a/tags.html
+++ b/tags.html
@@ -17,13 +17,16 @@
                 <nav><ul>
                     <li><a href="http://icymist.github.io/pages/about.html">About</a></li>
                     <li><a href="http://icymist.github.io/category/how-to.html">How To</a></li>
+                    <li><a href="http://icymist.github.io/category/productivity.html">Productivity</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Chaitanya Krishna Ande</h1>
     <ul>
-        <li><a href="http://icymist.github.io/tag/linux.html">linux</a> (2)</li>
+        <li><a href="http://icymist.github.io/tag/git.html">git</a> (1)</li>
+        <li><a href="http://icymist.github.io/tag/latex.html">latex</a> (1)</li>
+        <li><a href="http://icymist.github.io/tag/linux.html">linux</a> (3)</li>
         <li><a href="http://icymist.github.io/tag/python.html">python</a> (1)</li>
     </ul>
 </section>
