Generate Pelican Site

--- a/categories.html
+++ b/categories.html
@@ -17,10 +17,14 @@
                 <nav><ul>
                     <li><a href="http://icymist.github.io/pages/about.html">About</a></li>
                     <li><a href="http://icymist.github.io/category/how-to.html">How To</a></li>
+                    <li><a href="http://icymist.github.io/category/investing.html">Investing</a></li>
+                    <li><a href="http://icymist.github.io/category/productivity.html">Productivity</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="http://icymist.github.io/category/how-to.html">How To</a></li>
+    <li><a href="http://icymist.github.io/category/investing.html">Investing</a></li>
+    <li><a href="http://icymist.github.io/category/productivity.html">Productivity</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="social">
