--- a/authors.html
+++ b/authors.html
@@ -17,13 +17,15 @@
                 <nav><ul>
                     <li><a href="http://icymist.github.io/pages/about.html">About</a></li>
                     <li><a href="http://icymist.github.io/category/how-to.html">How To</a></li>
+                    <li><a href="http://icymist.github.io/category/investing.html">Investing</a></li>
+                    <li><a href="http://icymist.github.io/category/productivity.html">Productivity</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Chaitanya Krishna Ande</h1>
     <ul>
-        <li><a href="http://icymist.github.io/author/chaitanya-krishna-ande.html">Chaitanya Krishna Ande</a> (2)</li>
+        <li><a href="http://icymist.github.io/author/chaitanya-krishna-ande.html">Chaitanya Krishna Ande</a> (4)</li>
     </ul>
 </section>
 
