--- a/install-anaconda-for-a-painless-python-experience.html
+++ b/install-anaconda-for-a-painless-python-experience.html
@@ -17,6 +17,8 @@
                 <nav><ul>
                     <li><a href="http://icymist.github.io/pages/about.html">About</a></li>
                     <li class="active"><a href="http://icymist.github.io/category/how-to.html">How To</a></li>
+                    <li><a href="http://icymist.github.io/category/investing.html">Investing</a></li>
+                    <li><a href="http://icymist.github.io/category/productivity.html">Productivity</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
